Projekt/main/style.css
/* ... */
@keyframes shine {
  0% {
    opacity: 0%
  }

  50% {
    opacity: 100%;
  }

  100% {
    opacity: 0%;
  }
}


.menu-slide {
  position: absolute;
  top: var(--nav-height);
  left: -100%;
  width: 100vw;
  height: calc(100vh - var(--nav-height));
  transition: left 0.5s ease-in;
  z-index: 1;
}

.menu-slide.show {
  left: 0;
}

.menu-slide ul {
  height: 75%;
  text-transform: uppercase;
}

.menu-slide ul li {
  display: block;
}



/*

FOOTER

- all CSS instructions regarding <footer>

*/



footer {
  grid-column: 1 / 13;

  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-gap: var(--grid-gutter-width);
  padding-top: 10vh;
  padding-bottom: 10vh;
}

.foo-title {
  grid-row: 1;
}

.foo-data {
  grid-row: 2;
}

.foo-flex-item {
  padding-right: 20px;
  width: 100%;
  height: 100%;
}

#foo-title-vers,
#foo-data-vers {
  grid-column: 2 / 5;
}

#foo-title-time,
#foo-data-time {
  grid-column: 5 / 8;
}

#foo-title-soci,
#foo-soci-container {
  grid-column: 9 / 13;
}



/*

GENERAL

- general classes for every .html - files

*/



.button-confirm {
  line-height: 200%;
  text-transform: uppercase;
  font-size: var(--font-size-regular);
  font-weight: var(--weight-bold);
  border-radius: 0px 31px 0px 0px;
  cursor: pointer;
}



/*

FORM

- all general CSS classes regarding <form>
- use of id allowed

*/



.form {
  --help-input-shadowHei: 4px;
  grid-column: 1 / 13;
  grid-auto-flow: row;
}

input, #help-msg {
  border-radius: 0px 31px 0px 0px;
  font-weight: calc(0.67 * var(--weight-bold));
}

input[type="text"], #help-msg {
  font-size: var(--font-size-small);
  
  border: 0;
  outline: none;
  padding-left: 10px;
}

form input[type="button"] {
  border: 0;
  outline: none;
}

input[type="text"] {
  line-height: 250%;
  padding-top: 3px;
  padding-bottom: 3px;
}

.form-col {
  grid-column: 2 / 12;
}

.form-col1 {
  grid-column: 2 / 12;
}

.form-col2 {
  grid-column: 2 / 12;
}

.form-needed-txt {
  font-weight: var(--font-weight-bold);
}

.form-input-empty:not(:focus):hover {
  box-shadow: 2px var(--help-input-shadowHei) 0px 0px var(--color-primary);
}

.form-input-empty:focus {
  border: 3px solid var(--color-primary);
}

.form-input-false:not(:focus):hover {
  box-shadow: 4px var(--help-input-shadowHei) 0px 0px var(--color-blutrubin);
}

.form-input-false:focus {
  border: 3px solid var(--color-blutrubin);
}

.form-input-true:not(:focus):hover {
  box-shadow: 4px var(--help-input-shadowHei) 0px 0px var(--color-lightgreen);
}

.form-input-true:focus {
  border: 3px solid var(--color-lightgreen);
}

.form-err {
  margin-top: var(--help-input-shadowHei);
  font-size: 12px;
}

.form-desc {
  font-size: var(--font-size-small);
}

.form-button {
  grid-column: 7 / 12;
}

/* Form - Specific */

#help-msg {
  line-height: 150%;
  height: 150px;
}



/*

INDEX.HTML

- all CSS instructions regarding the page "index.html"

*/



/* Index - Grid */

#main-grid {
  grid-auto-flow: row;
}

/* Index - Header */

#main-header {
  --main-header-columns: 2 / 12;

  grid-row: 2;
  background: url(./assets/graphics/background_header.png);
  background-size: cover;
  background-repeat: no-repeat;
  padding-block: 15vh;
  background-position: center center;
  grid-template-rows: repeat(3, auto);
}

#main-header-title {
  grid-row: 1;
  text-shadow: 1px 1px 8px var(--color-darken);
  text-transform: uppercase;
  margin-bottom: 1rem;
}

#main-header-txt {
  grid-row: 2;
  grid-column: var(--main-header-columns);
  text-shadow: 1px 1px 8px var(--color-darken);
}

#main-header-btn {

  grid-column: var(--main-header-columns);
  grid-row: 3 / 4;  
  margin-top: 100px;
}

/* Index - Section 2-4 */

.section-standard {
  grid-row-gap: var(--grid-gutter-width);
  padding-top: 10vh;
  padding-bottom: 10vh;
}

.header-standard {
  grid-row-gap: var(--grid-gutter-width);
  padding-top: 10vh;
  padding-bottom: 10vh;
}

.main-sect-title {
  grid-row: 1;
  grid-column: 2 / 12;
}

.main-sect-txt {
  grid-row: 2;
  grid-column: 2 / 12;
}

/* Index - Section 2 ("About Us") */

.person-image {
  grid-column: 3 / 11;
  clip-path: circle(50% at center);
  width: 100%;
}

.person-text {
  grid-column: 3 / 11;
  text-align: center;
}

/* Index - Section 3 ("???") */

#main-sect3-img {
  grid-row: 3;
  grid-column: 2 / 12;
  width: 100%;
  border-top-right-radius: 10vh;
  box-shadow: 1rem -1rem 0 #2b2b2b;
  margin-top: 1rem;
}

/* Index - Section 4 ("???") */

#main-sect4-tab1,
#main-sect4-tab2 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1vh;
}

#main-sect4-tab1 {
  grid-column: 3 / 7;
}

#main-sect4-tab2 {
  grid-column: 7 / 11;
}

.main-sect4-activeTab {
  grid-row: 2 / 4;
  opacity: 1;
  border-top-right-radius: calc(1.5 * var(--font-size-small));
}

.main-sect4-hiddenTab {
  grid-row: 3;
  opacity: 0.5;
  border-top-right-radius: var(--font-size-small);
}

.main-sect4-tabcontainer {
  grid-column: 2 / 12;
  grid-row: 4;
  margin-top: calc(-1 * var(--grid-gutter-width));
  text-align: center;
}

#main-sect4-tabcontainer2 {
  visibility: hidden;
}

.main-sect4-tabcontainer>* {
  margin-top: 10px;
  margin-bottom: 10px;
}

/* Buttons */

.btn-pill {
  border-radius: 2rem;
  width: 100%;
  border: none;
  padding-block: 1rem;
  font-size: 1rem;
  font-weight: var(--font-weight-bolder);
  text-transform: uppercase;
}

/* Containers */

.container-xxl {
  max-width: 1400px;
}


/*

CHECKOUT.HTML

- all CSS instructions regarding the page "checkout.html"

*/



/* Checkout - Titel */

#out-grid {
  padding-bottom: 10vh;
}

#out-nav {
  grid-row: 1;
}

#out-title {
  grid-row: 2;
  padding-top: 5vh;
}

#out-flex {
  position: relative;
  width: 300vw;
  left: 0px;
  flex-direction: row;
  transition: transform 1s ease-in-out;
  margin-bottom: 10vh;
}

#out-flex > * {
  width: 100vw;
}

#out-empty {
  font-weight: var(--font-weight-bold);
  grid-column: 2 / -2;
}
/* ... */

